--- a/app/src/main/res/layout/dialog_add_order.xml
+++ b/app/src/main/res/layout/dialog_add_order.xml
@@ -57,7 +57,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimaryDark"
         android:text="submit"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescr" />
@@ -70,6 +72,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="cancel"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescr" />
